# claw-code

./: .gitignore  USAGE.md  launch-claw-selector.ps1  launcher-options.json  run 4.1mini.cmd  run deepseek-chat.cmd  run-claw-selector.cmd  saved-locations.json
rust/: .gitignore
rust/crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
rust/crates/api/src/providers/: mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: compact.rs  conversation.rs  file_ops.rs  lib.rs  prompt.rs  session.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: app.rs  input.rs  main.rs  render.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
